--- a/Trabajo/style.css
+++ b/Trabajo/style.css
@@ -1,6 +1,8 @@
 /* Ajustes generales */
 body {
-  background: #f8f9fa;
+  background-image: url('/Grupo1_Front/Trabajo/Imagen/aaa.gif');
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #212529;
 }
